<resources>
    <string name="app_name">就近就学</string>
    <string name="common_network_unavailable">当前网络不可用</string>
    <string name="common_network_error">网络有问题，请稍后重试</string>
    <string name="common_request_error">获取数据异常，请重试</string>

    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="forget_password">忘记密码</string>
    <string name="cancel">取消</string>


    <string name="aup_reg_phone">注册手机号</string>
    <string name="aup_code">验证码\u3000\u3000</string>
    <string name="aup_old_pass">原密码\u3000\u3000</string>
    <string name="aup_new_phone">新密码\u3000\u3000</string>
    <string name="aup_new_phone_again">再次输入\u3000</string>

</resources>
